tools/orc/tests/snapshots/test__test_limit_missing-1-linux.snap
---
source: tests/test.rs
expression: "String::from_utf8_lossy(cmd.get_output().stdout.as_slice())"
---
libraw.so -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libraw.so.23.0.0
╰── libjpeg.so.8 -> [RED][CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libraw.so.23.0.0
