tools/orc/tests/snapshots/test__test_limit_missing-1.snap
---
source: tests/test.rs
expression: "String::from_utf8_lossy(cmd.get_output().stdout.as_slice())"
---
raw_r.dll
├── [31mWS2_32.dll[39m
├── [31mjpeg8.dll[39m
╰── [31mKERNEL32.dll[39m
